# jupychatplot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/jupychatplot/: __init__.py  chat_widget.py  datachat.py  llm.py
src/jupychatplot/old/: chat_widget.py
