[project]
name = "jupychatplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hongyu", email = "hongyu@aestheticintegration.com" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain-anthropic>=0.3.1",
    "langgraph>=0.2.60",
    "matplotlib>=3.10.0",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
