[project]
name = "jupychatplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hongyu", email = "hongyu@aestheticintegration.com" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic-ai>=0.0.29",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "gradio>=5.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
